--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +7,34 @@
     <link rel="stylesheet" href="app/static/css/style.css">
 </head>
 <body>
+    <style>
+        *{margin: 0; padding: 0;}
+        body{background-color: #6495ED;} 
+
+        .main{width: 1000px; background-color: #FFF;margin: 0 auto;border-left: 2px solid #CCC;border-right: 2px solid #CCC;}
+        .up{padding: 20px 25px; border-bottom:2px solid #CCC;}
+        .up a{color: #333; text-decoration: none; font: 20px Arial;}
+        .up a:hover{text-decoration: underline;}
+
+        .content{background-color: #FFF; padding: 20px 25px; overflow: auto;}
+        .content article{margin-bottom: 20px;}
+        .content h1{font: 24px Arial;color:#6495ED; margin-bottom: 20px;}
+
+        .float-right{float: right};
+
+
+        article h2{padding-bottom: 17px;}
+        article h2 a{font:22px Arial; color: #333;text-decoration: none;}
+        article h2 a:hover{text-decoration: underline}
+        article pre{font:16px Arial; color: #333;padding-left: 2px;}
+    </style>
     <div class="main">
         <div class="up">
             <header>
                 <nav>
                     <a href="?page=home">Home</a>
                     <a href="?page=about">Sobre</a>
+                    <a href="?page=admin&method=index" class="float-right">Admin</a>
                 </nav>
             </header>
         </div>
